# cosmogenesis-learning-engine

./: .cfignore  .dockerignore  .eslintrc.json  .flyignore  .gitattributes  .gitignore  .prettierignore  BOT_CONTRACT.md  BOT_RELAY.md  CHANGELOG.md  CHANGE_RECOMMENDATIONS.txt  CMakeLists.txt  CODEX_144_99_SEED.md  CONTRIBUTING.md  Dockerfile  ENGINES.md  INTEGRATION.md  LICENSE  LICENSE-CODE  MAJOR_ARCANA_REGISTRY.md  ND_SAFE_POLICY.md  PROTECT.md  README-Cosmogenesis.md  README.md  README.me  README_CODEX_INSTRUCTIONS.md  README_Circuitum.md  README_Cosmogenesis.md  README_Master.md  README_RENDERER.md  README_Stone_Cathedral.md  README_circuitum99.md  RUN.md  STYLE_GUIDE.md  TAROT_SYSTEM.md  TASKS.md  _headers  add_tesseract_module.sh  cathedral.html  codex_instructions.md  (+31 more)
LORE/: living_laws.md
REGISTRY/: tarot_system.md
SYSTEM/: system_map.md
assets/: README.md  crystal_artifacts.json  theme.json
bridge/: c99-bridge.js  c99-bridge.json  tarot-codex-bridge.json  tarot_codex_bridge.py
cathedral/: cathedral-circuits-implementation.html  index.html  main.ts
chapels/: rooms-atlas.html
circuitum99/: index.html  story.ink
codex/: data.map.json  inject.cathedral.html  inject.loader.js  inject.medallions.html
codex-144-99/: README.md
codex144_99_fusion_kink/: README.md  app.py  index.html  style.css
components/: cathedral-plaque.ts  temple-garden.ts
config/: features.json  toggles.json
core/: harmonics_index.json  health-check.html  health-check.js  index.html  index.js  service-worker.js  system-status.js
cosmic-helix-renderer/: README_RENDERER.md
(+1013 files in other folders)
